Project

General

Profile

Actions

Bug #9276

closed

"RUBY_FREE_MIN is obsolete. Use RUBY_GC_HEAP_FREE_SLOTS instead" warning should not be issued when both ENV vars are set.

Bug #9276: "RUBY_FREE_MIN is obsolete. Use RUBY_GC_HEAP_FREE_SLOTS instead" warning should not be issued when both ENV vars are set.

Added by myronmarston (Myron Marston) almost 13 years ago. Updated over 12 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 2.1.0dev (2013-12-20 trunk 44301) [x86_64-darwin12.0]
[ruby-core:59255]

Description

Trying out ruby 2.1.0-rc1, I keep getting this warning. I understand why, and I've updated my ~/.zshrc to set RUBY_GC_HEAP_FREE_SLOTS for ruby 2.1, but I need to keep RUBY_GC_HEAP_FREE_SLOTS set for projects running on earlier versions. Ideally, this warning would only be emitted when RUBY_FREE_MIN is set and RUBY_GC_HEAP_FREE_SLOTS is not set. If RUBY_GC_HEAP_FREE_SLOTS is set, the programmer clearly knows that's the ENV var to use for 2.1, and likely needs to keep RUBY_FREE_MIN in place for running code against older rubies. After all, having RUBY_FREE_MIN set on 2.1 doesn't cause any problems, right?

Actions

Also available in: PDF Atom