* gc.c (ruby_gc_set_params): don't show obsolete warnings for   RUBY_FREE_MIN/RUBY_HEAP_MIN_SLOTS if   RUBY_GC_HEAP_FREE_SLOTS/RUBY_GC_HEAP_INIT_SLOTS are given.   [Bug #9276]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@44327 b2dd03c8-39d4-4d8f-98ff-823fe69b080e